toolchain/internal/core/analysis/testdata/errors/enums/duplicate_value_via_spread.vdl
// @expect: E303

enum BaseRole {
  Admin = "admin"
}

enum AllRoles {
  ...BaseRole
  SuperAdmin = "admin"
}
